--- a/untitled2.html
+++ b/untitled2.html
@@ -88,7 +88,7 @@
       normalize: true,
     });
 
-    wavesurfer.load('tu-audio.mp3'); // Cambia esto por la ruta real de tu mp3
+    wavesurfer.load('song.wav'); // Cambia esto por la ruta real de tu mp3
 
     const playBtn = document.getElementById('playBtn');
     const playIcon = document.getElementById('playIcon');
