--- a/untitled2.html
+++ b/untitled2.html
@@ -79,8 +79,8 @@
   <script>
     const wavesurfer = WaveSurfer.create({
       container: '#waveform',
-      waveColor: '',
-      progressColor: '',
+      waveColor: '#00BFFF',
+      progressColor: '#00BFFF',
       barWidth: 4,
       barRadius: 4,
       height: 80,
